<resources>
    <string name="app_name">Coursework</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="refresh_icon">Refresh Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="log_out_action">Log Out</string>
    <string name="settings_action">Settings</string>
    <string name="number_of_questions">Number Of Questions:</string>
    <string name="choose_a_category">Choose a Category:</string>
    <string name="choose_a_difficulty">Choose a Difficulty:</string>
    <string name="choose_the_type_of_questions">Choose the Type of Questions:</string>
    <string name="save_preferences">SAVE PREFERENCES</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="home_icon">Home Icon</string>
    <string name="user_settings">User Settings</string>
    <string name="question_settings">Question Settings</string>
    <string name="clear_preferences">Clear Preferences</string>
    <string name="achievements">Achievements</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="user_already_logged_in">You are already logged in</string>
    <string name="account_creation_error_msg">Email already registered or passwords do not match</string>
    <string name="empty_fields_msg">Please fill out all fields</string>
    <string name="login_error_msg">Email or Password Incorrect</string>
    <string name="log_out_msg">You have logged out</string>

    <string-array name="num_of_questions_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="categories_array">
        <item>Any</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>Any</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="type_of_questions_array">
        <item>Any</item>
        <item>Multiple Choice</item>
        <item> True / False</item>
    </string-array>

    <string-array name="settings_tab_array">
        <item>Question Settings</item>
        <item>User Settings</item>
    </string-array>

    <string-array name="question_time_array">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_description">question description</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="change_username">CHANGE USERNAME</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="enter_new_email_address">Enter New Email Address</string>
    <string name="change_email">CHANGE EMAIL</string>
    <string name="question_refresh_time">Question Refresh Time</string>
    <string name="previous_responses_action">Previous Responses</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>