<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:id="@+id/createAccountView"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createAccountNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/enter_full_name"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createAccountEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_email_address"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createAccountPassWordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_password"
        android:inputType="text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reEnterPassWordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/re_enter_password"
        android:inputType="text"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />

</androidx.appcompat.widget.LinearLayoutCompat>

