<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/numOfQuestionsTxtView"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/number_of_questions"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/numOfQuestionsSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/categoriesTxtView"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/choose_a_category"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/categoriesSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/difficultyTxtView"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/choose_a_difficulty"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/typeOfQuestionTxtView"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/choose_the_type_of_questions"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/typeOfQuestionsSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/questionTimeTxtView"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/question_refresh_time"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/questionTimeSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveSettingsBtn"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_preferences" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearSettingsBtn"
        android:layout_marginTop="30dp"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_preferences" />

</androidx.appcompat.widget.LinearLayoutCompat>